# TreeHierarchy

./: README.md  pyproject.toml  setup.cfg
TreeHierarchy/TreeHierarchy.egg-info/: SOURCES.txt
src/: README.md  TreeHierarchy.py
src/TreeHierarchy/: TreeHierarchy.py  __init__.py
src/TreeHierarchy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
