[project]
name = "TreeHierarchy"
version = "0.1.0"
description = "A class for constructing a hierachical tree based classifier"
authors = [
   {name = "Graham Roberts", email = "grahamrobertsw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = ["scikit-learn>=1.7.1",
                "numpy>=2.2.6",
                "joblib>=1.5.1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
