[metadata]
name = TreeHierarchy
version = 0.1.0
author = Graham Roberts
author_email = grahamrobertsw@gmail.com
description = A tree based hierarchical classifier
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    requests>=2.20.0
    numpy>=2.2.6
    scikit-learn>=1.7.1
    joblib>=1.5.1
python_requires >= 3.10

